--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,23 +8,23 @@
     <link rel="stylesheet" type="text/css" href="./index.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <title>Test</title>
-    <script src="js/index.js"></script>
 </head>
 
-<body ng-app="appNameGoesHere">
-    <div style="margin: 50px">
-        <a class="btn btn-primary" href="#/login" role="button">Login</a>
-        <a class="btn btn-primary" href="#/register" role="button">Register</a>
-        <a class="btn btn-primary" href="#/" role="button">Home</a>
-        <div style="padding: 10px; border: 1px solid black;" ng-view></div>
-    </div>
+<body ng-app="myApp" ng-controller="myCtrl">
+    <h1>{{ initMessage }}</h1>
 </body>
 
+<script src="js/index.js"></script>
 
 </html>
