another pack of updates

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
         </nav>
       </header>
     
-      <main style="margin-top: 70px" role="main" class="container" ng-view></main>
+      <main role="main" class="container" ng-view></main>
 </body>
 
 <script type="text/javascript" src="app.js"></script>
